--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "bunnys_mega_bingo",
+  "name": "mern-stack-template",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "backend": "nodemon server/app.js",
+    "start": "concurrently \"npm run backend\" \"cd client && npm start\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC"
