--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,24 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
+    "peerjs": "^1.3.2",
+    "react-chat-elements": "^10.15.0",
+    "react-custom-scrollbars-2": "^4.4.0",
+    "react-full-screen": "^1.0.2",
+    "react-horizontal-scrolling-menu": "^0.7.10",
+    "react-image-gallery": "^1.0.9",
+    "react-input-slider": "^6.0.0",
+    "react-photo-gallery": "^8.0.0",
+    "react-player": "^2.9.0",
+    "react-responsive-carousel": "^3.2.18",
+    "react-scroll-to-bottom": "^4.1.2",
+    "simple-peer": "^9.11.0",
+    "socket.io-client": "^4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
